# cmake-qt-test

./: CMakeLists.txt  README.rst  main.cxx
